--- a/index.html
+++ b/index.html
@@ -340,18 +340,13 @@
       new Star('star').down();
     }, 300)
 
-    const generateAnimateWriter = async (writerList) => {
-      const writerCount = writerList.length;
-      for (const writer of writerList) {
-        await writer.animateCharacter();
-      }
-      
-      document.getElementsByClassName('happy-birthday__container')[0].style.opacity = 0;
+    function generateAnimateWriter () {
       fireRandom();
       setInterval(() => {
         fireRandom();
-      } , 2000);
+      } , 6000);
     }
+    generateAnimateWriter();
   </script>
   
   <div class="velas">
@@ -512,13 +507,13 @@ c-7.606-0.447-6.058-37.895-20.62-23.333c-10.167,10.166-15.972-0.747-25,12C119.54
 </svg>
 <div class="text">
   <h1 style="color:rgb(123, 224, 255);font-size: 50px; z-index: 100;padding: auto;position:relative;">happy birthday!</h1>
-  <h1 style="font-size: 16px; color:white; z-index: 100;padding: auto;top: 100px; right: 50px;position: fixed;">     var someone = "you"       </h1>
-  <h1 style="font-size: 16px;color:white; z-index: 100;padding: auto;top: 124px; right: 50px;position: fixed;"> while(someone is "you") {</h1>
-  <h1 style="font-size: 16px;color:white; z-index: 100;padding: auto;top: 148px; right: 50px;position: fixed;"> printformat(</h1>
-  <h1 style="font-size: 16px;color:white; z-index: 100;padding: auto;top: 172px; right: 50px;position: fixed;"> "I like %s and will wait for %s."</h1>
-  <h1 style="font-size: 16px;color:white; z-index: 100;padding: auto;top: 202px; right: 50px;position: fixed;"> , someone, someone) }</h1>
-  <h1 style="font-size: 16px;color:white;font-size: 10px; z-index: 100;padding: auto;bottom: 25px; right: 20px;position: fixed;"> @申歆安</h1>
-  <h1 style="font-size: 16px;color:white;font-size: 10px; z-index: 100;padding: auto;bottom: 10px; right: 20px;position: fixed;"> 2021.10.08</h1>
+  <h1 style="font-size: 16px; color:rgba(255, 255, 255, 0.644); z-index: 100;padding: auto;top: 100px; right: 10px;position: fixed;">     var someone = "you"       </h1>
+  <h1 style="font-size: 16px;color:rgba(255, 255, 255, 0.644); z-index: 100;padding: auto;top: 124px; right: 10px;position: fixed;"> while(someone is "you") {</h1>
+  <h1 style="font-size: 16px;color:rgba(255, 255, 255, 0.644); z-index: 100;padding: auto;top: 148px; right: 10px;position: fixed;"> printformat(</h1>
+  <h1 style="font-size: 16px;color:rgba(255, 255, 255, 0.644); z-index: 100;padding: auto;top: 172px; right: 10px;position: fixed;"> "I like %s and will wait for %s."</h1>
+  <h1 style="font-size: 16px;color:rgba(255, 255, 255, 0.644); z-index: 100;padding: auto;top: 202px; right: 10px;position: fixed;"> , someone, someone) }</h1>
+  <h1 style="font-size: 16px;color:rgba(255, 255, 255, 0.644);font-size: 10px; z-index: 100;padding: auto;bottom: 25px; right: 20px;position: fixed;"> @申歆安</h1>
+  <h1 style="font-size: 16px;color:rgba(255, 255, 255, 0.644);font-size: 10px; z-index: 100;padding: auto;bottom: 10px; right: 20px;position: fixed;"> 2021.10.08</h1>
   </div>
 <div class="btn-audio"><audio id="mp3Btn"><source src="生日快乐.mp3" type="audio/mpeg" ></source></audio></div>
 <script type="text/javascript" src="http://yuanmouren.erlyun.com/assets/js/jquery-1.7.2.min.js"></script>
