--- a/index.html
+++ b/index.html
@@ -519,8 +519,8 @@ c-7.606-0.447-6.058-37.895-20.62-23.333c-10.167,10.166-15.972-0.747-25,12C119.54
   <h1 style="font-size: 16px; color:rgba(255, 255, 255, 0.644); z-index: 100;padding: auto;top: 100px; right: 10px;position: fixed;">     var someone = "you"       </h1>
   <h1 style="font-size: 16px;color:rgba(255, 255, 255, 0.644); z-index: 100;padding: auto;top: 124px; right: 10px;position: fixed;"> while(someone is "you") {</h1>
   <h1 style="font-size: 16px;color:rgba(255, 255, 255, 0.644); z-index: 100;padding: auto;top: 148px; right: 10px;position: fixed;"> printformat(</h1>
-  <h1 style="font-size: 16px;color:rgba(255, 255, 255, 0.644); z-index: 100;padding: auto;top: 172px; right: 10px;position: fixed;"> "I like %s and will wait for %s."</h1>
-  <h1 style="font-size: 16px;color:rgba(255, 255, 255, 0.644); z-index: 100;padding: auto;top: 202px; right: 10px;position: fixed;"> , someone, someone) }</h1>
+  <h1 style="font-size: 16px;color:rgba(255, 255, 255, 0.644); z-index: 100;padding: auto;top: 172px; right: 10px;position: fixed;"> "I love %s."</h1>
+  <h1 style="font-size: 16px;color:rgba(255, 255, 255, 0.644); z-index: 100;padding: auto;top: 202px; right: 10px;position: fixed;"> , someone) }</h1>
   <h1 style="font-size: 16px;color:rgba(255, 255, 255, 0.644);font-size: 10px; z-index: 100;padding: auto;bottom: 25px; right: 20px;position: fixed;"> @歆安❥(^_-)</h1>
   <h1 style="font-size: 16px;color:rgba(255, 255, 255, 0.644);font-size: 10px; z-index: 100;padding: auto;bottom: 10px; right: 20px;position: fixed;"> 2022.09.28</h1>
   </div>
